<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainSelection"
    android:weightSum="1"
    android:background="@drawable/paper2">

    <Button
        android:id="@+id/addphoto_button"
        android:text="@string/add_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="selectOption"
        android:background="@color/button"/>

    <ImageView
        android:layout_marginTop="15dp"
        android:id="@+id/viewpicture"
        android:src="@drawable/noimage"
        android:layout_width="match_parent"
        android:layout_height="270dp" />

    <EditText
        android:id="@+id/name_edittext"
        android:hint="@string/enter_filename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/imagetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:src="@drawable/text"
            android:background="@null"
            android:id="@+id/textrecog_button"
            android:onClick="getText"
            android:contentDescription="@string/save_image"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:src="@drawable/save"
            android:background="@null"
            android:id="@+id/saveimage_button"
            android:onClick="saveimage"
            android:contentDescription="@string/save_image"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/list"
            android:onClick="checklist"
            android:contentDescription="@string/check_list"/>


    </LinearLayout>
</LinearLayout>
